# perf_skill

./: .gitignore  README-CN.md  README.md  pyproject.toml
.github/skills/hardware-event-observe/: SKILL.md  package-requirement.txt
.github/skills/hardware-event-observe/scripts/: run-observe.sh
.github/workflows/: release.yml
docs/: claw-toolkits.md  guide.md  ironclaw.md  local-testing.md
scripts/release/: bump_version.py  generate_changelog.py  validate_tag.py
skills/hardware-event-observe/: SKILL.md  package-requirement.txt
skills/hardware-event-observe/scripts/: run-observe.sh
src/perf_skill/: __init__.py  __main__.py  analysis.py  cli.py  export.py  flamegraph.py  models.py  parser.py  perf.py  processes.py  release_tools.py  ui.py
tests/: test_analysis.py  test_bump_version.py  test_cli.py  test_export.py  test_flamegraph.py  test_parser.py  test_perf.py  test_release_tools.py  test_skill_runtime.py  test_ui.py
