[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-skill"
version = "0.1.0"
description = "Declarative Linux PMU observation on top of perf stat"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "GitHub Copilot" }
]
dependencies = []

[project.scripts]
perf-skill = "perf_skill.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
